# Semester3_C2plus

./: CMakeLists.txt  CMakePresets.json  build.cmd  readme.md
src/: CMakeLists.txt
src/Bruch/: Bruch.cpp  CMakeLists.txt  Main.cpp
src/Uebung1/: CMakeLists.txt  Main-3.cpp  Main1.cpp  MyString.cpp  MyString.h
src/common/: helloworld.cpp
